--- a/src/doc/移动端适配.md
+++ b/src/doc/移动端适配.md
@@ -2,3 +2,16 @@
 自动设置rem基准值
 npm i amfe-flexible
 安装postcss-pxtorem
+2. 关于PostCSS配置文件
+PostCSS是一个允许JS插件转换样式的工具
+
+Autoprefixer 插件可以实现自动添加浏览器相关的声明前缀
+postcss-pxtorem插件可以实现将px转换为rem
+
+
+package.json
+"browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
